--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "abiodunjames/bigbluebutton",
+    "name": "mtgofa/bigbluebutton",
     "description": "Bigbluebutton wrapper for laravel 5",
     "license": "MIT",
     "keywords": ["laravel", "bigbluebutton", "wrapper"],
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
+        "laravel/framework": "^6",
         "bigbluebutton/bigbluebutton-api-php": "dev-master"
 
     },
